--- a/stellar-wallet-frontend/src/index.css
+++ b/stellar-wallet-frontend/src/index.css
@@ -147,3 +147,13 @@
     transition: var(--transition-smooth);
   }
 }
+
+*::-webkit-scrollbar{
+  display: none;
+}
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0; /* optional */
+}
