--- a/kosh/src/kosh_frontend/src/index.css
+++ b/kosh/src/kosh_frontend/src/index.css
@@ -152,3 +152,14 @@
     transition: var(--transition-smooth);
   }
 }
+
+
+*::-webkit-scrollbar{
+  display: none;
+}
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0; /* optional */
+}
